--- a/src/components/Avatar/style.scss
+++ b/src/components/Avatar/style.scss
@@ -1,5 +1,6 @@
 .avatar img{
     border-radius: 50%;
     border: 2px solid white;
-    filter: drop-shadow(10px 6px 5px rgba(0, 0, 0, 0.3));
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
   }
