--- a/src/components/Feedback/style.scss
+++ b/src/components/Feedback/style.scss
@@ -1,22 +1,18 @@
-.feedback{
+.feedback {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  &-user {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     gap: 1rem;
+    font-size: 1.4rem;
+  }
 
-    &-user{
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-        font-size: 1.4rem;
-    }
-
-    &-text{
-        background: #EEEEEE;
-        padding: 1rem;
-        border-radius: .5rem;
-    }
-
-    img {
-        border-radius: 50%;
-    }
+  &-text {
+    background: #eeeeee;
+    padding: 1rem;
+    border-radius: 0.5rem;
+  }
 }
