there is just left tests

--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -33,4 +33,9 @@
     button {
         width: 100px;
     }
+
+    button:disabled{
+        cursor: not-allowed;
+        background-color: #555;
+    }
 }
