--- a/src/components/EducationBody/style.scss
+++ b/src/components/EducationBody/style.scss
@@ -26,9 +26,37 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background: #EEEEEE;
+    background: #eeeeee;
     padding: 1rem;
-    border-radius: .5rem;
-    box-shadow: 0 0 6px 3px rgba(0,0,0,.4);
+    border-radius: 0.5rem;
+    box-shadow: 0 0 6px 3px rgba(0, 0, 0, 0.4);
   }
+}
+
+.education-icon {
+  transition: transform 0.3s ease-in-out;
+  font-size: 3rem;
+  margin: auto;
+  color: blue;
+  font-weight: 700;
+}
+
+.loading {
+  animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.education-error{
+  margin: auto;
+  font-size: 2rem;
+  font-weight: bolder;
+  color: red;
 }
